# Cedrh

./: .gitignore  Cargo.toml  README.md  notes.md
src/: args.rs  buffer.rs  colortheme.rs  editor.rs  filetype.rs  highlighting.rs  main.rs  row.rs  terminal.rs
test_syntax/: LeetCodeTask.h  Program.cs  editor.rs  main.py
