[package]
name = "cedrh"
version = "0.3.6"
edition = "2021"
authors = ["Sergey Nechoroshev <sergo777ser777@gmail.com>"]
description = """
cedrh - simple console text-editor with syntax highighting written in Rust
"""
keywords = ["text-editor", "editor", "terminal", "utf-8", "Rust"]
categories = ["text-editors", "development-tools"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/SergoGansta777/Cedrh"
homepage = "https://github.com/SergoGansta777/Cedrh"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
crossterm = "0.27.0"
shellexpand = "3.1.0"
unicode-segmentation = "1.10.1"
